# 3D_variational_auto_encoder

./: .gitignore  LICENSE  README.md  __init__.py  dataloaders.py  eval_3d.py  evaluation.py  feasibility.py  image_utils.py  main.py  model.py  pyproject.toml  requirements-gpu.txt  requirements.in  requirements.txt  train_3d.py  trainer.py
model_utils/: utils2.py
model_utils/blocks/: __init__.py  acti_norm.py  attention_module.py  convolutions.py  segresnet_block.py  upsample.py
model_utils/layers/: __init__.py  factories.py  utils.py
model_utils/utils/: enums.py  misc.py
src/vae3d2d/: __init__.py  dataloaders.py  eval_3d.py  evaluation.py  feasibility.py  image_utils.py  logger_utils.py  loss_functions.py  main.py  model.py  train_3d.py  trainer.py
src/vae3d2d/model_utils/: __init__.py  utils2.py
src/vae3d2d/model_utils/blocks/: __init__.py  acti_norm.py  convolutions.py  segresnet_block.py  upsample.py  upsample_new.py
src/vae3d2d/model_utils/layers/: factories.py  utils.py
src/vae3d2d/model_utils/utils/: __init__.py  enums.py  misc.py
