[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vae3d2d"                    # what you `pip install`
version = "0.2.0"
description = "3D and 2D VAE tools for medical and grayscale images"
readme = "pypi_description.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }            # or update if different

authors = [
  { name = "Zack Duitz", email = "iduitz@gmail.com" }
]

# Runtime deps (excluding torch)
dependencies = [
  "numpy",
  "wandb",
  "tqdm",
  "imageio[ffmpeg]",
  "pillow",
]

[project.urls]
Homepage = "https://github.com/zackdui/3D_variational_auto_encoder"
Issues = "https://github.com/zackdui/3D_variational_auto_encoder/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
